Fixed some issues with navigation on mobile

--- a/map/theme.css
+++ b/map/theme.css
@@ -15,6 +15,8 @@ body {
 	font-family: pixel;
 	margin: 0;
 	overflow: hidden;
+	width: 100%;
+	height: 100vh;
 }
 input {
 	font-family: pixel;
